kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_reviewer_result__advance_phase.snap
---
source: tests/runtime_cli_snapshots.rs
assertion_line: 272
expression: response
---
{
  "output": {
    "data": {
      "allow_new_obligations": false,
      "assumption_authoring_request": false,
      "audit_request": null,
      "authorized_node_ids": null,
      "cleanup_dismiss_tasks": [],
      "cleanup_next_task": null,
      "cleanup_request_reaudit": false,
      "clear_human_input": false,
      "comments": "",
      "confirm_protected_semantic_change_scope": false,
      "consume_global_repair_grant": false,
      "decision": "advance_phase",
      "difficulty_updates": {},
      "dismiss_audit_plan": false,
      "dismissed_tasks": [],
      "global_repair_request": null,
      "must_close_active": true,
      "next_active": "main_node",
      "next_active_coarse": "",
      "next_mode": "targeted",
      "next_worker_context_mode": "resume",
      "paper_focus_ranges": [],
      "paper_grounding": {
        "basis_summary": "",
        "consulted_cited_ranges": false
      },
      "protected_semantic_change_node_ids": [],
      "reason": "All theorems stated; ready for ProofFormalization.",
      "request_sound_verifier_node_ids": [],
      "reset": "none",
      "reset_blocker_ids": [],
      "reset_node": "",
      "stuck_math_audit": null,
      "task_blocker_ids": [],
      "work_style_hint": "none"
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_trellis_reviewer_result_ok"
}
