kernel/tests/snapshots/runtime_cli_snapshots/validate_trellis_reviewer_result__invalid_decision.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": null,
    "errors": [
      "decision must be one of ['continue', 'advance_phase', 'need_input', 'done']"
    ],
    "ok": false
  },
  "status": "validate_trellis_reviewer_result_ok"
}
